--- a/contact-us.html
+++ b/contact-us.html
@@ -593,7 +593,7 @@
                     <form
                       id="contact-form"
                       method="POST"
-                      action="https://formsubmit.co/ebc6fa71801e03712c264989b553b55d"
+                      action="https://formsubmit.co/sakrox90@gmail.com"
                     >
                       <input
                         type="hidden"
