--- a/contact-us.html
+++ b/contact-us.html
@@ -597,8 +597,8 @@
                     >
                       <input
                         type="hidden"
-                        name="form-name"
-                        value="contactForm"
+                        name="_next"
+                        value="http://127.0.0.1:5500/thanks.html"
                       />
                       <div class="row">
                         <div class="col-md-12">
