--- a/contact-us.html
+++ b/contact-us.html
@@ -593,12 +593,12 @@
                     <form
                       id="contact-form"
                       method="POST"
-                      action="https://formsubmit.co/sakrox90@gmail.com"
+                      action="https://formsubmit.co/ebc6fa71801e03712c264989b553b55d"
                     >
                       <input
                         type="hidden"
                         name="_next"
-                        value="http://127.0.0.1:5500/thanks.html"
+                        value="https://starlit-kringle-2d021d.netlify.app/thanks.html"
                       />
                       <div class="row">
                         <div class="col-md-12">
