--- a/about-us/our-people.html
+++ b/about-us/our-people.html
@@ -144,51 +144,67 @@
 			<div class="container clearfix et_menu_container">
 				<div class="logo_container">
 					<span class="logo_helper"></span>
-					<a href="../home.html">
-						<img src="../asset/uploads/ol-logo.png" alt="Organic Ledger" id="logo"
-							data-height-percentage="54" />
-					</a>
+					<img src="asset/uploads/ol-logo.png" alt="" id="logo" data-height-percentage="54" />
+					<img src="asset/uploads/ol-logo.png" class="img-white" data-height-percentage="54"
+						data-actual-width="257" data-actual-height="42">
+
 				</div>
 				<div id="et-top-navigation" data-height="66" data-fixed-height="40">
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 							<li id="menu-item-863"
 								class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863">
+								<a>Business</a>
+								<ul class="sub-menu">
+									<li id="menu-item-2426"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-2426">
+										<a href="/home.html">Farmers</a>
+									</li>
+									<li id="menu-item-690"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-690">
+										<a href="/home.html">Consumers</a>
+									</li>
+								</ul>
+							</li>
+							<li id="menu-item-863"
+								class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863">
 								<a>About us</a>
 								<ul class="sub-menu">
 									<li id="menu-item-2426"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-2426">
-										<a href="our-strategy-approach.html">Our Strategy &#038;
+										<a href="about-us/our-strategy-approach.html">Our Strategy &#038;
 											Approach</a>
 									</li>
 									<li id="menu-item-690"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-690">
-										<a href="our-people.html">Our People</a>
+										<a href="about-us/our-people.html">Our People</a>
 									</li>
 								</ul>
 							</li>
 							<li id="menu-item-4083"
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4083"><a
-									href="../solutions.html">Solution</a></li>
+									href="solutions.html">Solution</a></li>
 
-							<li id="menu-item-42"
-								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-42"><a
-									href="../impact.html">Impact</a></li>
+							
 							<li id="menu-item-46"
 								class="first-level menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-46">
 								<a href="">Media</a>
 								<ul class="sub-menu">
 									<li id="menu-item-702"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
-										<a href="../Media/case-studies.html">Case Studies</a>
+										<a href="impact.html">Impact</a>
 									</li>
 									<li id="menu-item-702"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
-										<a href="../Media/video.html">Videos</a>
+										<a href="Media/case-studies.html">Case Studies</a>
 									</li>
 									<li id="menu-item-702"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
-										<a href="../Media/publication.html">Publication</a>
+										<a href="Media/video.html">Videos</a>
+									</li>
+									<li id="menu-item-702"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
+										<a href="Media/publication.html">Publication</a>
 									</li>
 
 								</ul>
@@ -196,13 +212,13 @@
 
 							<li id="menu-item-5943"
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5943"><a
-									href="../know-your-food.html">Know Your Food</a></li>
-									<li id="menu-item-5943"
+									href="know-your-food.html">Know Your Food</a></li>
+							<li id="menu-item-5943"
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5943"><a
-									href="../KisanLedger.html">Kisan Ledger</a></li>
+									href="KisanLedger.html">Kisan Ledger</a></li>
 							<li id="menu-item-41"
 								class="contact-menu fixed-contact menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
-								<a href="../contact-us.html">Request For Demo</a>
+								<a href="contact-us.html">Request For Demo</a>
 							</li>
 						</ul>
 					</nav>
@@ -221,6 +237,7 @@
 					</div>
 				</div> <!-- #et-top-navigation -->
 			</div> <!-- .container -->
+
 		</header> <!-- #main-header -->
 		<div id="et-main-area">
 
