--- a/contact-us.html
+++ b/contact-us.html
@@ -402,18 +402,43 @@
         <div class="container clearfix et_menu_container">
           <div class="logo_container">
             <span class="logo_helper"></span>
-            <a href="home.html">
-              <img
-                src="asset/uploads/ol-logo.png"
-                alt=""
-                id="logo"
-                data-height-percentage="54"
-              />
-            </a>
+            <img
+              src="asset/uploads/ol-logo.png"
+              alt=""
+              id="logo"
+              data-height-percentage="54"
+            />
+            <img
+              src="asset/uploads/ol-logo.png"
+              class="img-white"
+              data-height-percentage="54"
+              data-actual-width="257"
+              data-actual-height="42"
+            />
           </div>
           <div id="et-top-navigation" data-height="66" data-fixed-height="40">
             <nav id="top-menu-nav">
               <ul id="top-menu" class="nav">
+                <li
+                  id="menu-item-863"
+                  class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863"
+                >
+                  <a>Business</a>
+                  <ul class="sub-menu">
+                    <li
+                      id="menu-item-2426"
+                      class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-2426"
+                    >
+                      <a href="/home.html">Farmers</a>
+                    </li>
+                    <li
+                      id="menu-item-690"
+                      class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-690"
+                    >
+                      <a href="/home.html">Consumers</a>
+                    </li>
+                  </ul>
+                </li>
                 <li
                   id="menu-item-863"
                   class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863"
@@ -449,6 +474,12 @@
                 >
                   <a href="">Media</a>
                   <ul class="sub-menu">
+                    <li
+                      id="menu-item-702"
+                      class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702"
+                    >
+                      <a href="impact.html">Impact</a>
+                    </li>
                     <li
                       id="menu-item-702"
                       class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702"
