--- a/home.html
+++ b/home.html
@@ -187,6 +187,20 @@ type='text/css' media='all' />
 						<ul id="top-menu" class="nav">
 							<li id="menu-item-863"
 								class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863">
+								<a>Business</a>
+								<ul class="sub-menu">
+									<li id="menu-item-2426"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-2426">
+										<a href="/home.html">Farmers</a>
+									</li>
+									<li id="menu-item-690"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-690">
+										<a href="/home.html">Consumers</a>
+									</li>
+								</ul>
+							</li>
+							<li id="menu-item-863"
+								class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863">
 								<a>About us</a>
 								<ul class="sub-menu">
 									<li id="menu-item-2426"
@@ -204,13 +218,15 @@ type='text/css' media='all' />
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4083"><a
 									href="solutions.html">Solution</a></li>
 
-							<li id="menu-item-42"
-								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-42"><a
-									href="impact.html">Impact</a></li>
+							
 							<li id="menu-item-46"
 								class="first-level menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-46">
 								<a href="">Media</a>
 								<ul class="sub-menu">
+									<li id="menu-item-702"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
+										<a href="impact.html">Impact</a>
+									</li>
 									<li id="menu-item-702"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
 										<a href="Media/case-studies.html">Case Studies</a>
@@ -337,7 +353,7 @@ type='text/css' media='all' />
 
 													<div class="et_pb_code_inner"><a class="popup-youtube"
 															href="https://www.youtube.com/embed/07XnPKfp0rY"><img
-																src="asset/uploads/Group-35797.webp" /></a></div>
+																src="asset/uploads/Group-35797.webp" style="height: 47.5rem;"/></a></div>
 												</div> <!-- .et_pb_code -->
 											</div> <!-- .et_pb_column -->
 											<div
@@ -404,7 +420,8 @@ type='text/css' media='all' />
 															Organic Ledger is a complete solution for all your needs</h2>
 														<p
 															style="font-weight: 250; font-size: 18px; line-height: 30px; text-align: center; color: #101010;">
-															<b> Organic Ledger is a full stack blockchain powered Agritech solution that provides transparency, traceability, and trust in the agricultural supply chain. We now have an agri ERP system, blockchain-powered marketplace, satellite mapping, advisory services, data analytics, and customer connection. 
+															<b> Organic Ledger is a full stack blockchain powered Agritech solution that provides traceability, transparency and trust
+																in the agricultural supply chain. We now have an agri ERP system, blockchain-powered marketplace, satellite mapping, advisory services, data analytics, and customer connection. 
 																Our farmer’s App Kisan Ledger aims to maximize per-acre value, promote regenerative agricultural practices, and reduce the agri carbon footprint using cutting edge technology to assist farmers with better production and improved earnings.
 																</b>
 														</p>
@@ -503,7 +520,7 @@ type='text/css' media='all' />
 										<div class="col-md-4 p-4">
 											<div class="border">
 												<div class="position-relative w-100"
-													style="height: 250px;background-image: url(asset/uploads/micro.webp); background-size: cover; background-position: center;">
+													style="height: 250px;background-image: url(asset/uploads/ms_logo.webp); background-size: cover; background-position: center;">
 													<div class="position-absolute bg-dark"
 														style="opacity: .3; top: 0; left:0; right: 0; bottom: 0;"></div>
 													<div class="position-absolute text-white d-flex flex-column justify-content-center align-items-center rounded-circle"
@@ -548,7 +565,7 @@ type='text/css' media='all' />
 										<div class="col-md-4 p-4">
 											<div class="border">
 												<div class="position-relative w-100"
-													style="height: 250px;background-image: url(asset/uploads/expo.webp); background-size: cover; background-position: center;">
+													style="height: 250px;background-image: url(asset/uploads/global_exhibition_logo.jpeg); background-size: cover; background-position: center;">
 													<div class="position-absolute bg-dark"
 														style="opacity: .3; top: 0; left:0; right: 0; bottom: 0;"></div>
 													<div class="position-absolute text-white d-flex flex-column justify-content-center align-items-center rounded-circle"
@@ -593,7 +610,7 @@ type='text/css' media='all' />
 										<div class="col-md-4 p-4">
 											<div class="border">
 												<div class="position-relative w-100"
-													style="height: 250px;background-image: url(asset/uploads/blockchain.webp); background-size: cover; background-position: center;">
+													style="height: 250px;background-image: url(asset/uploads/india_blockchain_logo.webp); background-size: cover; background-position: center;">
 													<div class="position-absolute bg-dark"
 														style="opacity: .3; top: 0; left:0; right: 0; bottom: 0;"></div>
 													<div class="position-absolute text-white d-flex flex-column justify-content-center align-items-center rounded-circle"
@@ -724,7 +741,7 @@ type='text/css' media='all' />
 										<div class="col-md-4 p-4">
 											<div class="border">
 												<div class="position-relative w-100"
-													style="height: 250px;background-image: url(asset/uploads/nvidia.png); background-size: cover; background-position: center;">
+													style="height: 250px;background-image: url(asset/uploads/nvidia_logo.png); background-size: cover; background-position: center;">
 													<div class="position-absolute bg-dark"
 														style="opacity: .3; top: 0; left:0; right: 0; bottom: 0;"></div>
 													<div class="position-absolute text-white d-flex flex-column justify-content-center align-items-center rounded-circle"
@@ -827,7 +844,7 @@ type='text/css' media='all' />
 											<div class="col-md-4 p-4">
 												<div class="border">
 													<div class="position-relative w-100"
-														style="height: 250px;background-image: url(asset/uploads/recognition2.jpg.png); background-size: cover; background-position: center;">
+														style="height: 250px;background-image: url(asset/uploads/client_reviews.webp); background-size: cover; background-position: center;">
 														<div class="position-absolute bg-dark"
 															style="opacity: .3; top: 0; left:0; right: 0; bottom: 0;"></div>
 														<div class="position-absolute text-white d-flex flex-column justify-content-center align-items-center rounded-circle"
