--- a/impact.html
+++ b/impact.html
@@ -146,13 +146,28 @@
 			<div class="container clearfix et_menu_container">
 				<div class="logo_container">
 					<span class="logo_helper"></span>
-					<a href="home.html">
-						<img src="asset/uploads/ol-logo.png" id="logo" data-height-percentage="54" />
-					</a>
+					<img src="asset/uploads/ol-logo.png" alt="" id="logo" data-height-percentage="54" />
+					<img src="asset/uploads/ol-logo.png" class="img-white" data-height-percentage="54"
+						data-actual-width="257" data-actual-height="42">
+
 				</div>
 				<div id="et-top-navigation" data-height="66" data-fixed-height="40">
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
+							<li id="menu-item-863"
+								class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863">
+								<a>Business</a>
+								<ul class="sub-menu">
+									<li id="menu-item-2426"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-2426">
+										<a href="/home.html">Farmers</a>
+									</li>
+									<li id="menu-item-690"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-690">
+										<a href="/home.html">Consumers</a>
+									</li>
+								</ul>
+							</li>
 							<li id="menu-item-863"
 								class="first-level menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-863">
 								<a>About us</a>
@@ -172,13 +187,15 @@
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4083"><a
 									href="solutions.html">Solution</a></li>
 
-							<li id="menu-item-42"
-								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-42"><a
-									href="impact.html">Impact</a></li>
+							
 							<li id="menu-item-46"
 								class="first-level menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-46">
 								<a href="">Media</a>
 								<ul class="sub-menu">
+									<li id="menu-item-702"
+										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
+										<a href="impact.html">Impact</a>
+									</li>
 									<li id="menu-item-702"
 										class="second-level menu-item menu-item-type-post_type menu-item-object-page menu-item-702">
 										<a href="Media/case-studies.html">Case Studies</a>
@@ -198,7 +215,7 @@
 							<li id="menu-item-5943"
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5943"><a
 									href="know-your-food.html">Know Your Food</a></li>
-									<li id="menu-item-5943"
+							<li id="menu-item-5943"
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5943"><a
 									href="KisanLedger.html">Kisan Ledger</a></li>
 							<li id="menu-item-41"
@@ -222,15 +239,7 @@
 					</div>
 				</div> <!-- #et-top-navigation -->
 			</div> <!-- .container -->
-			<div class="et_search_outer">
-				<div class="container et_search_form_container">
-					<form role="search" method="get" class="et-search-form" action="">
-						<input type="search" class="et-search-field" placeholder="Search &hellip;" value="" name="s"
-							title="Search for:" />
-					</form>
-					<span class="et_close_search_field"></span>
-				</div>
-			</div>
+
 		</header> <!-- #main-header -->
 		<div id="et-main-area">
 
